Allow usafe of `Unsafe`
Workaround for #4195